fix: Добавить версионирование статики для сброса кэша
- Добавлен параметр ?v=1.0.1 ко всем CSS и JS файлам
- Это заставит Telegram и браузеры загрузить обновленные файлы
- Решает проблему с кэшированием старой версии приложения на мобильных устройствах

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,15 +9,15 @@
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   
   <!-- App Styles -->
-  <link rel="stylesheet" href="src/app/styles/variables.css">
-  <link rel="stylesheet" href="src/app/styles/global.css">
-  <link rel="stylesheet" href="src/app/styles/index.css">
+  <link rel="stylesheet" href="src/app/styles/variables.css?v=1.0.1">
+  <link rel="stylesheet" href="src/app/styles/global.css?v=1.0.1">
+  <link rel="stylesheet" href="src/app/styles/index.css?v=1.0.1">
   
   <!-- Widget Styles -->
-  <link rel="stylesheet" href="src/widgets/footer-navigation/ui/footer.css">
+  <link rel="stylesheet" href="src/widgets/footer-navigation/ui/footer.css?v=1.0.1">
   
   <!-- Entity Styles -->
-  <link rel="stylesheet" href="src/entities/record/ui/record-card.css">
+  <link rel="stylesheet" href="src/entities/record/ui/record-card.css?v=1.0.1">
 </head>
 <body>
   <!-- Main Content -->
@@ -55,7 +55,7 @@
         </svg>
         <span>Записи</span>
       </button>
-      <button class="footer-btn" data-tab="settings" onclick="window.location.href='src/pages/settings/index.html'">
+      <button class="footer-btn" data-tab="settings" onclick="window.location.href='src/pages/settings/index.html?v=1.0.1'">
         <svg viewBox="0 0 24 24">
           <path d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
           <path d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
@@ -66,11 +66,11 @@
   </footer>
 
   <!-- App Scripts -->
-  <script type="module" src="src/app/providers/telegram/init.js"></script>
-  <script type="module" src="src/app/config/theme.js"></script>
+  <script type="module" src="src/app/providers/telegram/init.js?v=1.0.1"></script>
+  <script type="module" src="src/app/config/theme.js?v=1.0.1"></script>
   
   <!-- Page Scripts -->
-  <script type="module" src="src/pages/records/records.js"></script>
+  <script type="module" src="src/pages/records/records.js?v=1.0.1"></script>
 </body>
 </html>
 
