--- a/frontend/src/pages/settings/index.html
+++ b/frontend/src/pages/settings/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Настройки - Личный кабинет</title>
-  
+
   <!-- Telegram Web App SDK -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  
+
   <!-- App Styles -->
-  <link rel="stylesheet" href="../../app/styles/variables.css">
-  <link rel="stylesheet" href="../../app/styles/global.css">
-  <link rel="stylesheet" href="../../app/styles/index.css">
-  
+  <link rel="stylesheet" href="../../app/styles/variables.css?v=1.0.1">
+  <link rel="stylesheet" href="../../app/styles/global.css?v=1.0.1">
+  <link rel="stylesheet" href="../../app/styles/index.css?v=1.0.1">
+
   <!-- Widget Styles -->
-  <link rel="stylesheet" href="../../widgets/footer-navigation/ui/footer.css">
-  <link rel="stylesheet" href="../../widgets/settings-menu/ui/settings-menu.css">
+  <link rel="stylesheet" href="../../widgets/footer-navigation/ui/footer.css?v=1.0.1">
+  <link rel="stylesheet" href="../../widgets/settings-menu/ui/settings-menu.css?v=1.0.1">
 </head>
+
 <body>
   <!-- Main Content -->
   <main id="app">
@@ -30,7 +32,8 @@
               <p>Редактировать личную информацию</p>
             </div>
             <svg class="settings-item-arrow" viewBox="0 0 24 24" width="20" height="20">
-              <path d="M9 18l6-6-6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M9 18l6-6-6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                stroke-linejoin="round" />
             </svg>
           </div>
         </div>
@@ -41,7 +44,8 @@
               <p>Настроить расписание</p>
             </div>
             <svg class="settings-item-arrow" viewBox="0 0 24 24" width="20" height="20">
-              <path d="M9 18l6-6-6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M9 18l6-6-6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                stroke-linejoin="round" />
             </svg>
           </div>
         </div>
@@ -52,7 +56,8 @@
               <p>Управление списком услуг</p>
             </div>
             <svg class="settings-item-arrow" viewBox="0 0 24 24" width="20" height="20">
-              <path d="M9 18l6-6-6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M9 18l6-6-6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                stroke-linejoin="round" />
             </svg>
           </div>
         </div>
@@ -63,7 +68,8 @@
               <p>Управление клиентами и записями</p>
             </div>
             <svg class="settings-item-arrow" viewBox="0 0 24 24" width="20" height="20">
-              <path d="M9 18l6-6-6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M9 18l6-6-6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                stroke-linejoin="round" />
             </svg>
           </div>
         </div>
@@ -74,15 +80,17 @@
   <!-- Footer Navigation Widget -->
   <footer class="footer">
     <div class="footer-grid">
-      <button class="footer-btn" data-tab="records" onclick="window.location.href='../../../index.html'">
+      <button class="footer-btn" data-tab="records" onclick="window.location.href='../../../index.html?v=1.0.1'">
         <svg viewBox="0 0 24 24">
-          <path d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+          <path
+            d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
         </svg>
         <span>Записи</span>
       </button>
       <button class="footer-btn active" data-tab="settings">
         <svg viewBox="0 0 24 24">
-          <path d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
+          <path
+            d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
           <path d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
         </svg>
         <span>Настройки</span>
@@ -91,11 +99,11 @@
   </footer>
 
   <!-- App Scripts -->
-  <script type="module" src="../../app/providers/telegram/init.js"></script>
-  <script type="module" src="../../app/config/theme.js"></script>
-  
-  <!-- Page Scripts -->
-  <script type="module" src="./settings.js"></script>
-</body>
-</html>
+  <script type="module" src="../../app/providers/telegram/init.js?v=1.0.1"></script>
+  <script type="module" src="../../app/config/theme.js?v=1.0.1"></script>
 
+  <!-- Page Scripts -->
+  <script type="module" src="./settings.js?v=1.0.1"></script>
+</body>
+
+</html>
