feat: add animated loader component to all pages
- Created loader component in shared/ui/loader/
- Added loader.css with animated square animation
- Added loader.js with show/hide functionality
- Integrated loader on all pages (index, profile, settings, schedule, services, management)
- Added demo page and documentation (README.md, IMPLEMENTATION.md)
- Loader automatically shows on page load and hides when loaded
- Can be controlled manually via pageLoader.show()/hide() methods

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="src/app/styles/global.css?v=1.0.4">
   <link rel="stylesheet" href="src/app/styles/index.css?v=1.0.4">
 
+  <!-- Loader Styles -->
+  <link rel="stylesheet" href="src/shared/ui/loader/loader.css?v=1.0.0">
+
   <!-- Widget Styles -->
   <link rel="stylesheet" href="src/widgets/footer-navigation/ui/footer.css?v=1.0.4">
 
@@ -73,6 +76,9 @@
   <!-- App Scripts -->
   <script type="module" src="src/app/providers/telegram/init.js?v=1.0.2"></script>
   <script type="module" src="src/app/config/theme.js?v=1.0.2"></script>
+
+  <!-- Loader Script -->
+  <script type="module" src="src/shared/ui/loader/loader.js?v=1.0.0"></script>
 
   <!-- Page Scripts -->
   <script type="module" src="src/pages/records/records.js?v=1.0.2"></script>
