--- a/frontend/src/pages/profile/index.html
+++ b/frontend/src/pages/profile/index.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="../../app/styles/global.css?v=1.0.4">
   <link rel="stylesheet" href="../../app/styles/index.css?v=1.0.4">
 
+  <!-- Loader Styles -->
+  <link rel="stylesheet" href="../../shared/ui/loader/loader.css?v=1.0.0">
+
   <!-- Widget Styles -->
   <link rel="stylesheet" href="../../widgets/footer-navigation/ui/footer.css?v=1.0.4">
   <link rel="stylesheet" href="../../widgets/profile-card/ui/profile-card.css?v=1.0.4">
@@ -138,6 +141,9 @@
   <!-- App Scripts -->
   <script type="module" src="../../app/providers/telegram/init.js?v=1.0.4"></script>
   <script type="module" src="../../app/config/theme.js?v=1.0.4"></script>
+
+  <!-- Loader Script -->
+  <script type="module" src="../../shared/ui/loader/loader.js?v=1.0.0"></script>
 
   <!-- Page Scripts -->
   <script type="module" src="./profile.js?v=1.0.4"></script>
