Fix: Show loader immediately on navigation button click
- Created navigation.js module to handle page transitions with loader
- Changed all footer buttons from onclick to data-href attributes
- Loader now appears instantly when clicking navigation buttons
- Updated settings.js to use navigateWithLoader function
- Added documentation for navigation system

Fixes issue where page content flashed before loader appeared

--- a/frontend/src/pages/profile/index.html
+++ b/frontend/src/pages/profile/index.html
@@ -119,15 +119,14 @@
   <!-- Footer Navigation Widget -->
   <footer class="footer">
     <div class="footer-grid">
-      <button class="footer-btn" data-tab="records" onclick="window.location.href='../../../index.html?v=1.0.4'">
+      <button class="footer-btn" data-tab="records" data-href="../../../index.html?v=1.0.4">
         <svg viewBox="0 0 24 24">
           <path
             d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
         </svg>
         <span>Записи</span>
       </button>
-      <button class="footer-btn active" data-tab="settings"
-        onclick="window.location.href='../settings/index.html?v=1.0.4'">
+      <button class="footer-btn active" data-tab="settings" data-href="../settings/index.html?v=1.0.4">
         <svg viewBox="0 0 24 24">
           <path
             d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
@@ -144,6 +143,9 @@
 
   <!-- Loader Script -->
   <script type="module" src="../../shared/ui/loader/loader.js?v=1.0.0"></script>
+
+  <!-- Navigation Script -->
+  <script type="module" src="../../shared/lib/navigation.js?v=1.0.0"></script>
 
   <!-- Page Scripts -->
   <script type="module" src="./profile.js?v=1.0.4"></script>
