--- a/frontend/src/pages/settings/index.html
+++ b/frontend/src/pages/settings/index.html
@@ -83,7 +83,7 @@
   <!-- Footer Navigation Widget -->
   <footer class="footer">
     <div class="footer-grid">
-      <button class="footer-btn" data-tab="records" onclick="window.location.href='../../../index.html?v=1.0.4'">
+      <button class="footer-btn" data-tab="records" data-href="../../../index.html?v=1.0.4">
         <svg viewBox="0 0 24 24">
           <path
             d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
@@ -107,6 +107,9 @@
 
   <!-- Loader Script -->
   <script type="module" src="../../shared/ui/loader/loader.js?v=1.0.0"></script>
+
+  <!-- Navigation Script -->
+  <script type="module" src="../../shared/lib/navigation.js?v=1.0.0"></script>
 
   <!-- Page Scripts -->
   <script type="module" src="./settings.js?v=1.0.1"></script>
