Refactor loader logic: implement request counter pattern and centralized ApiClient

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,11 +45,7 @@
     </div>
   </main>
 
-  <!-- Индикатор загрузки -->
-  <div id="loading-indicator" class="loading-indicator" style="display: none;">
-    <div class="loading-spinner"></div>
-    <p>Загрузка...</p>
-  </div>
+  <!-- Индикатор загрузки removed (using global loader) -->
 
   <!-- Footer Navigation Widget -->
   <footer class="footer">
