--- a/frontend/src/pages/profile/index.html
+++ b/frontend/src/pages/profile/index.html
@@ -25,15 +25,7 @@
 <body>
   <!-- Main Content -->
   <main id="app">
-    <!-- Loading Indicator -->
-    <div id="loading-indicator" class="loading-indicator" style="display: none;">
-      <div style="text-align: center; padding: 20px;">
-        <div
-          style="display: inline-block; width: 40px; height: 40px; border: 4px solid var(--accent-color, #3390ec); border-radius: 50%; border-top-color: transparent; animation: spin 1s linear infinite;">
-        </div>
-        <p style="margin-top: 10px; color: var(--text-secondary);">Загрузка...</p>
-      </div>
-    </div>
+    <!-- Loading Indicator removed (using global loader) -->
 
     <!-- Error Message -->
     <div id="error-message" class="error-message"
