feat: Удалена нижняя навигация и добавлена кнопка Назад
- Убран футер со страницы графика для увеличения пространства
- Добавлена нативная кнопка Telegram BackButton для возврата
- Обновлены версии до v=1.0.7

--- a/frontend/src/pages/schedule/index.html
+++ b/frontend/src/pages/schedule/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="../../shared/ui/loader/loader.css?v=1.0.0">
 
   <!-- Page Styles -->
-  <link rel="stylesheet" href="schedule.css?v=1.0.6">
+  <link rel="stylesheet" href="schedule.css?v=1.0.7">
 
   <!-- Widget Styles -->
   <link rel="stylesheet" href="../../widgets/footer-navigation/ui/footer.css?v=1.0.5">
@@ -122,46 +122,14 @@
     </div>
   </div>
 
-  <!-- Footer Navigation Widget -->
-  <footer class="footer">
-    <div class="footer-grid">
-      <button class="footer-btn" data-tab="records" data-href="../../../index.html">
-        <svg viewBox="0 0 24 24">
-          <path
-            d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-        </svg>
-        <span>Записи</span>
-      </button>
-      <button class="footer-btn" data-tab="services" data-href="../services/index.html">
-        <svg viewBox="0 0 24 24">
-          <path
-            d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
-        </svg>
-        <span>Услуги</span>
-      </button>
-      <button class="footer-btn active" data-tab="settings" data-href="../settings/index.html">
-        <svg viewBox="0 0 24 24">
-          <path
-            d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-          <path d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-        </svg>
-        <span>Настройки</span>
-      </button>
-      <button class="footer-btn" data-tab="profile" data-href="../profile/index.html">
-        <svg viewBox="0 0 24 24">
-          <path d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-        </svg>
-        <span>Профиль</span>
-      </button>
-    </div>
-  </footer>
+  <!-- Footer removed for full screen calendar experience -->
 
   <!-- App Scripts -->
-  <script type="module" src="../../app/providers/telegram/init.js?v=1.0.6"></script>
-  <script type="module" src="../../app/config/theme.js?v=1.0.6"></script>
-  <script type="module" src="../../shared/ui/loader/loader.js?v=1.0.6"></script>
-  <script type="module" src="../../shared/lib/navigation.js?v=1.0.6"></script>
-  <script type="module" src="schedule.js?v=1.0.6"></script>
+  <script type="module" src="../../app/providers/telegram/init.js?v=1.0.7"></script>
+  <script type="module" src="../../app/config/theme.js?v=1.0.7"></script>
+  <script type="module" src="../../shared/ui/loader/loader.js?v=1.0.7"></script>
+  <script type="module" src="../../shared/lib/navigation.js?v=1.0.7"></script>
+  <script type="module" src="schedule.js?v=1.0.7"></script>
 </body>
 
 </html>
