--- a/frontend/src/pages/schedule/index.html
+++ b/frontend/src/pages/schedule/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="../../shared/ui/loader/loader.css?v=1.0.0">
 
   <!-- Page Styles -->
-  <link rel="stylesheet" href="schedule.css?v=1.0.7">
+  <link rel="stylesheet" href="schedule.css?v=1.0.9">
 
   <!-- Widget Styles -->
   <link rel="stylesheet" href="../../widgets/footer-navigation/ui/footer.css?v=1.0.5">
@@ -56,6 +56,14 @@
 
     </div>
   </main>
+
+  <!-- Floating Action Button -->
+  <div class="fab-container" id="fab-container">
+    <button class="fab-btn" id="configure-btn">
+      <span class="fab-icon">⚙️</span>
+      <span class="fab-text" id="fab-text">Настроить (0)</span>
+    </button>
+  </div>
 
   <!-- Bottom Sheet (Day Settings) -->
   <div class="bottom-sheet-overlay" id="bottom-sheet-overlay"></div>
@@ -125,11 +133,11 @@
   <!-- Footer removed for full screen calendar experience -->
 
   <!-- App Scripts -->
-  <script type="module" src="../../app/providers/telegram/init.js?v=1.0.7"></script>
-  <script type="module" src="../../app/config/theme.js?v=1.0.7"></script>
-  <script type="module" src="../../shared/ui/loader/loader.js?v=1.0.7"></script>
-  <script type="module" src="../../shared/lib/navigation.js?v=1.0.7"></script>
-  <script type="module" src="schedule.js?v=1.0.8"></script>
+  <script type="module" src="../../app/providers/telegram/init.js?v=1.0.9"></script>
+  <script type="module" src="../../app/config/theme.js?v=1.0.9"></script>
+  <script type="module" src="../../shared/ui/loader/loader.js?v=1.0.9"></script>
+  <script type="module" src="../../shared/lib/navigation.js?v=1.0.9"></script>
+  <script type="module" src="schedule.js?v=1.0.9"></script>
 </body>
 
 </html>
