feat: implement public booking system
- Backend:
  - Add booking_slug and avatar_url to User model
  - Create migration 002_add_booking_fields
  - Add generate/delete booking link endpoints to profiles API
  - Create public_booking API (profile, services, availability, book)
  - Register public_booking router

- Frontend:
  - Create public booking page (HTML/CSS/JS) with responsive design
  - Add 'Booking Link' option to Settings page
  - Implement link generation and sharing logic

- Documentation:
  - Add PUBLIC_BOOKING_COMPLETE.md

--- a/frontend/src/pages/settings/index.html
+++ b/frontend/src/pages/settings/index.html
@@ -52,6 +52,18 @@
             </svg>
           </div>
         </div>
+        <div class="settings-item" id="booking-link-item">
+          <div class="settings-item-content">
+            <div class="settings-item-text">
+              <h3>🔗 Ссылка для записи</h3>
+              <p>Поделиться ссылкой с клиентами</p>
+            </div>
+            <svg class="settings-item-arrow" viewBox="0 0 24 24" width="20" height="20">
+              <path d="M9 18l6-6-6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+          </div>
+        </div>
         <div class="settings-item">
           <div class="settings-item-content">
             <div class="settings-item-text">
