--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,16 @@
   <!-- Telegram Web App SDK -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
+  <!-- Eruda Mobile Console for Debugging (only in development) -->
+  <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+  <script>
+    // Initialize Eruda for mobile debugging
+    if (window.Telegram?.WebApp) {
+      eruda.init();
+      console.log('🔧 Eruda mobile console initialized');
+    }
+  </script>
+
   <!-- App Styles -->
   <link rel="stylesheet" href="src/app/styles/variables.css?v=1.0.4">
   <link rel="stylesheet" href="src/app/styles/global.css?v=1.0.4">
@@ -69,7 +79,7 @@
   </footer>
 
   <!-- App Scripts -->
-  <script type="module" src="src/app/providers/telegram/init.js?v=1.0.6"></script>
+  <script type="module" src="src/app/providers/telegram/init.js?v=1.0.7"></script>
   <script type="module" src="src/app/config/theme.js?v=1.0.2"></script>
 
   <!-- Loader Script -->
@@ -79,7 +89,7 @@
   <script type="module" src="src/shared/lib/navigation.js?v=1.0.0"></script>
 
   <!-- Page Scripts -->
-  <script type="module" src="src/pages/records/records.js?v=1.0.6"></script>
+  <script type="module" src="src/pages/records/records.js?v=1.0.7"></script>
 </body>
 
 </html>
