Fix cache busting: add version 1.0.8 to all critical scripts to force reload and fix API URL issues

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,17 +79,24 @@
   </footer>
 
   <!-- App Scripts -->
-  <script type="module" src="src/app/providers/telegram/init.js?v=1.0.7"></script>
-  <script type="module" src="src/app/config/theme.js?v=1.0.2"></script>
+  <script type="module" src="src/app/providers/telegram/init.js?v=1.0.8"></script>
+  <script type="module" src="src/app/config/theme.js?v=1.0.8"></script>
+
+  <!-- Shared Libraries (with cache busting) -->
+  <script type="module" src="src/shared/config/api.js?v=1.0.8"></script>
+  <script type="module" src="src/shared/lib/jwt-auth.js?v=1.0.8"></script>
+  <script type="module" src="src/shared/lib/api-client.js?v=1.0.8"></script>
+  <script type="module" src="src/shared/lib/profile-api.js?v=1.0.8"></script>
+  <script type="module" src="src/shared/lib/telegram.js?v=1.0.8"></script>
 
   <!-- Loader Script -->
-  <script type="module" src="src/shared/ui/loader/loader.js?v=1.0.0"></script>
+  <script type="module" src="src/shared/ui/loader/loader.js?v=1.0.8"></script>
 
   <!-- Navigation Script -->
-  <script type="module" src="src/shared/lib/navigation.js?v=1.0.0"></script>
+  <script type="module" src="src/shared/lib/navigation.js?v=1.0.8"></script>
 
   <!-- Page Scripts -->
-  <script type="module" src="src/pages/records/records.js?v=1.0.7"></script>
+  <script type="module" src="src/pages/records/records.js?v=1.0.8"></script>
 </body>
 
 </html>
